Edits info file so that js loads before CSS, which fixes loading screen problems; Adds scrollOverflow support to fullpage.js; Begins item level styling by moving metadata section

--- a/css/global.scss
+++ b/css/global.scss
@@ -288,7 +288,7 @@ aside {
   opacity: 1;
 }
 .blur {
-  filter: blur(5px) brightness(0.35);
+  filter: blur(5px) brightness(0.46);
   transition: filter 2s linear;
   transition-property: filter;
 }
@@ -579,8 +579,9 @@ color: transparent;
 
 #block-system-navigation {
     position: absolute;
-    right: -183px;
+    right: -207px;
     z-index: 2;
+    width: 200px;
     top: 0px;
 
     li {
@@ -750,7 +751,7 @@ img.blurredBG {
     width: 200px;
     height: 110px;
     overflow: hidden;
-    filter: brightness(0.35);
+    filter: brightness(0.46);
     transition-duration: .5s;        
     }
 
